# ImageProcessingSimonHillel

./: .gitignore  CMakeLists.txt  README.md  bmp24.c  bmp24.h  bmp8.c  bmp8.h  main.c  main.cpp
